--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun May  7 19:47:19 2006  Tim Janik  <timj@gtk.org>
+
+	* docs/faq.doxi: answer platform ports FAQ.
+
 Sun May  7 19:25:26 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstpreferences.c: dialog button fixups.
