--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Mon May  8 00:25:25 2006  Tim Janik  <timj@gtk.org>
+
+	* plugins/bseamplifier.cc:
+	* plugins/Makefile.plugins:
+	* plugins/Makefile.am: added BseAmplifier to plugins/.
+
 Sun May  7 23:53:16 2006  Tim Janik  <timj@gtk.org>
 
 	* icons/ampctrl.png:
