--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Wed May 10 00:44:58 2006  Stefan Westerfeld <stefan@space.twc.de>
+
+	* bseblockutils.hh: Minor formatting fix.
+
 Wed May 10 00:19:16 2006  Tim Janik  <timj@gtk.org>
 
 	* bseprobe.cc:
