--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 12 16:47:08 2006  Tim Janik  <timj@gtk.org>
+
+	* tools/bsefcompare.cc (parse): fixed option parser similar to bsefextract.
+
 Fri May 12 14:44:41 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tools/bsefextract.cc: Option parsing should work reliably now (fixed
