--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Fri May 12 16:49:38 2006  Tim Janik  <timj@gtk.org>
+
+	* bseserver.c:
+	* bsemain.[hc]: permit specification of an rcfile via --bse-rcfile.
+
+	* bseplugin.c: fixed SSE vs. FPU filtering to also affect drivers.
+
 Wed May 10 19:13:28 2006  Tim Janik  <timj@gtk.org>
 
 	* bseengine.c: document that probe jobs may be freely reordered.
